welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:12: error: type mismatch;
 found   : Unit
 required: Int
  else{}
      ^