welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  var ok=0
	for(i<-0 to nums.length-1){
    if (lookingFor==nums(i)){
 			ok=1
      return (i+1)
    }
  }
  if(ok==0){
    return -1
  }
  else{}
}
